Added css styles

--- a/views/logout.pug
+++ b/views/logout.pug
@@ -1,8 +1,8 @@
 doctype html
 html
 
-  link(rel='stylesheet' href='')
-
+  include styles.pug
+  
   body
 
     h1 Are you sure you want to logout?
