Added fixed message on index to display depending if use is signed in or not

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,3 +6,11 @@ html
   body
 
     include nav.pug
+
+    if email
+
+      h1 Welcome #{email}. You are now signed in!
+
+    else   
+
+      h1 Welcome to my App! Please sign in or register.
