--- a/views/login.pug
+++ b/views/login.pug
@@ -7,17 +7,20 @@ html
 
     include nav.pug
 
-    h1 Login
+    if msg
+      p #{msg}
 
-    form(method='POST')
-      if msg
-        p #{msg}
+    else
 
-      p
-        label(for='email') Email
-        input#email(type='email' name='email' placeholder='Email@email.com')
-      p
-        label(for='password') Password
-        input#password(type='password' name='password' placeholder='*********')
-      p
-        button(type='submit') Login
+      h1 Login
+
+      form(method='POST')
+
+        p
+          label(for='email') Email
+          input#email(type='email' name='email' placeholder='Email@email.com')
+        p
+          label(for='password') Password
+          input#password(type='password' name='password' placeholder='*********')
+        p
+          button(type='submit') Login
